LSTM 2.0 model with Test Accuracy: 0.6493

--- a/notebooks/LSTM_CNN_training.ipynb
+++ b/notebooks/LSTM_CNN_training.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 218,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-05T05:52:42.327031Z",
-     "start_time": "2025-07-05T05:52:42.217277Z"
+     "end_time": "2025-07-06T00:31:26.103805Z",
+     "start_time": "2025-07-06T00:31:25.971075Z"
     }
    },
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 219,
    "outputs": [
     {
      "name": "stdout",
@@ -170,15 +170,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-05T05:52:42.327984Z",
-     "start_time": "2025-07-05T05:52:42.297776Z"
+     "end_time": "2025-07-06T00:31:26.104758Z",
+     "start_time": "2025-07-06T00:31:26.086665Z"
     }
    },
    "id": "2837e0cf67eb1b42"
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 220,
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
@@ -220,29 +220,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-05T05:52:42.328054Z",
-     "start_time": "2025-07-05T05:52:42.305507Z"
+     "end_time": "2025-07-06T00:31:26.104881Z",
+     "start_time": "2025-07-06T00:31:26.093308Z"
     }
    },
    "id": "fd4e82176db1a6fe"
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 221,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/50 | Train Loss: 12.4605 | Train Acc: 0.5564 | Val Acc: 0.5625\n",
-      "Epoch 2/50 | Train Loss: 12.2515 | Train Acc: 0.5833 | Val Acc: 0.5556\n",
-      "Epoch 3/50 | Train Loss: 12.2778 | Train Acc: 0.5720 | Val Acc: 0.5625\n",
-      "Epoch 4/50 | Train Loss: 12.1429 | Train Acc: 0.5738 | Val Acc: 0.6181\n",
-      "Epoch 5/50 | Train Loss: 12.0462 | Train Acc: 0.5929 | Val Acc: 0.5972\n",
-      "Epoch 6/50 | Train Loss: 11.9956 | Train Acc: 0.6050 | Val Acc: 0.5625\n",
-      "Epoch 7/50 | Train Loss: 12.0721 | Train Acc: 0.5790 | Val Acc: 0.5764\n",
-      "Epoch 8/50 | Train Loss: 11.9015 | Train Acc: 0.6050 | Val Acc: 0.5417\n",
-      "Epoch 9/50 | Train Loss: 12.0407 | Train Acc: 0.5877 | Val Acc: 0.5694\n",
+      "Epoch 01/50 | Train Loss: 12.4622 | Train Acc: 0.5556 | Val Acc: 0.5625 | LR: 0.001000\n",
+      "Epoch 02/50 | Train Loss: 12.2519 | Train Acc: 0.5825 | Val Acc: 0.5625 | LR: 0.001000\n",
+      "Epoch 03/50 | Train Loss: 12.2876 | Train Acc: 0.5747 | Val Acc: 0.5486 | LR: 0.001000\n",
+      "Epoch 04/50 | Train Loss: 12.1538 | Train Acc: 0.5703 | Val Acc: 0.6250 | LR: 0.001000\n",
+      "Epoch 05/50 | Train Loss: 12.0421 | Train Acc: 0.5903 | Val Acc: 0.5903 | LR: 0.001000\n",
+      "Epoch 06/50 | Train Loss: 12.0015 | Train Acc: 0.6024 | Val Acc: 0.5556 | LR: 0.001000\n",
+      "Epoch 07/50 | Train Loss: 12.0734 | Train Acc: 0.5781 | Val Acc: 0.5972 | LR: 0.001000\n",
+      "Epoch 08/50 | Train Loss: 11.9101 | Train Acc: 0.6094 | Val Acc: 0.5694 | LR: 0.001000\n",
+      "Epoch 09/50 | Train Loss: 12.0186 | Train Acc: 0.5894 | Val Acc: 0.5625 | LR: 0.001000\n",
       "Early stopping triggered.\n"
      ]
     }
@@ -260,6 +260,7 @@
     "# Loss and optimizer\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=10, gamma=0.5)\n",
     "\n",
     "# Training loop\n",
     "EPOCHS = 50\n",
@@ -302,8 +303,9 @@
     "            val_total += y_val.size(0)\n",
     "\n",
     "    val_acc = val_correct / val_total\n",
+    "    scheduler.step()  # ← Step the learning rate here\n",
     "\n",
-    "    print(f\"Epoch {epoch+1}/{EPOCHS} | Train Loss: {total_loss:.4f} | Train Acc: {train_acc:.4f} | Val Acc: {val_acc:.4f}\")\n",
+    "    print(f\"Epoch {epoch+1:02}/{EPOCHS} | Train Loss: {total_loss:.4f} | Train Acc: {train_acc:.4f} | Val Acc: {val_acc:.4f} | LR: {scheduler.get_last_lr()[0]:.6f}\")\n",
     "\n",
     "    # Early stopping\n",
     "    if val_acc > best_val_acc:\n",
@@ -319,21 +321,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-05T05:52:47.623960Z",
-     "start_time": "2025-07-05T05:52:42.311765Z"
+     "end_time": "2025-07-06T00:31:30.771497Z",
+     "start_time": "2025-07-06T00:31:26.101264Z"
     }
    },
    "id": "b1bb2a522cbcfb19"
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 222,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.6276\n"
+      "Test Accuracy: 0.6138\n"
      ]
     }
    ],
@@ -357,8 +359,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-05T05:52:47.671233Z",
-     "start_time": "2025-07-05T05:52:47.625337Z"
+     "end_time": "2025-07-06T00:31:30.809549Z",
+     "start_time": "2025-07-06T00:31:30.770334Z"
     }
    },
    "id": "ea9afbe334c9d94b"
