--- a/notebooks/LSTM_CNN_2.0.ipynb
+++ b/notebooks/LSTM_CNN_2.0.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 98,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-06T00:31:39.391933Z",
-     "start_time": "2025-07-06T00:31:39.377825Z"
+     "end_time": "2025-07-06T03:21:57.047397Z",
+     "start_time": "2025-07-06T03:21:57.040172Z"
     }
    },
    "outputs": [],
@@ -30,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 99,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/l6/kt268nls2sqcx51m4w_z09pc0000gn/T/ipykernel_71433/1530795287.py:3: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "/var/folders/l6/kt268nls2sqcx51m4w_z09pc0000gn/T/ipykernel_71433/1144416275.py:4: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
       "  df = yf.download(\"AAPL\", start=start_date, end=end_date)\n",
       "[*********************100%***********************]  1 of 1 completed"
      ]
@@ -53,9 +53,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "/var/folders/l6/kt268nls2sqcx51m4w_z09pc0000gn/T/ipykernel_71433/1530795287.py:20: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/l6/kt268nls2sqcx51m4w_z09pc0000gn/T/ipykernel_71433/1144416275.py:21: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='ffill', inplace=True)\n",
-      "/var/folders/l6/kt268nls2sqcx51m4w_z09pc0000gn/T/ipykernel_71433/1530795287.py:21: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/l6/kt268nls2sqcx51m4w_z09pc0000gn/T/ipykernel_71433/1144416275.py:22: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='bfill', inplace=True)\n"
      ]
     }
@@ -63,6 +63,7 @@
    "source": [
     "start_date = \"2019-01-01\"\n",
     "end_date   = datetime.today().strftime('%Y-%m-%d')\n",
+    "#end_date = \"2025-05-05\"\n",
     "df = yf.download(\"AAPL\", start=start_date, end=end_date)\n",
     "\n",
     "# flatten MultiIndex cols if present\n",
@@ -88,15 +89,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-06T00:31:39.488232Z",
-     "start_time": "2025-07-06T00:31:39.385951Z"
+     "end_time": "2025-07-06T03:21:57.197499Z",
+     "start_time": "2025-07-06T03:21:57.062408Z"
     }
    },
    "id": "c474ad7969602daf"
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 100,
    "outputs": [
     {
      "name": "stdout",
@@ -132,15 +133,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-06T00:31:39.488723Z",
-     "start_time": "2025-07-06T00:31:39.463589Z"
+     "end_time": "2025-07-06T03:21:57.201003Z",
+     "start_time": "2025-07-06T03:21:57.192831Z"
     }
    },
    "id": "55611e2e380c887a"
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 101,
    "outputs": [
     {
      "name": "stdout",
@@ -166,20 +167,26 @@
     "val_loader   = DataLoader(val_ds,   batch_size=BATCH)\n",
     "test_loader  = DataLoader(test_ds,  batch_size=BATCH)\n",
     "\n",
-    "print(\"Loader check:\", next(iter(train_loader))[0].shape)  # (B,30,14)\n"
+    "print(\"Loader check:\", next(iter(train_loader))[0].shape)  # (B,30,14)\n",
+    "\n",
+    "# Save test data for external evaluation (e.g., FinBERT integration)\n",
+    "X_test_np = X_tensor[test_ds.indices].numpy()\n",
+    "y_test_np = y_tensor[test_ds.indices].numpy()\n",
+    "#np.save(\"X_test_pre_may.npy\", X_test_np)\n",
+    "#np.save(\"y_test_pre_may.npy\", y_test_np)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-06T00:31:39.493645Z",
-     "start_time": "2025-07-06T00:31:39.474276Z"
+     "end_time": "2025-07-06T03:21:57.256186Z",
+     "start_time": "2025-07-06T03:21:57.201513Z"
     }
    },
    "id": "bb57dd022727c1d3"
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 102,
    "outputs": [],
    "source": [
     "class LSTM_CNN_Attention(nn.Module):\n",
@@ -222,15 +229,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-06T00:31:39.497349Z",
-     "start_time": "2025-07-06T00:31:39.494787Z"
+     "end_time": "2025-07-06T03:21:57.262255Z",
+     "start_time": "2025-07-06T03:21:57.260690Z"
     }
    },
    "id": "4e8d2fb14b037185"
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 103,
    "outputs": [
     {
      "name": "stdout",
@@ -256,14 +263,6 @@
       "Epoch 18  TrainAcc 0.6173  ValAcc 0.5639  LR 0.00013\n",
       "Early stopping\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "LSTM_CNN_Attention(\n  (lstm): LSTM(14, 64, batch_first=True, bidirectional=True)\n  (ln): LayerNorm((128,), eps=1e-05, elementwise_affine=True)\n  (conv1): Conv1d(128, 24, kernel_size=(3,), stride=(1,), padding=(1,))\n  (bn1): BatchNorm1d(24, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n  (conv2): Conv1d(24, 24, kernel_size=(3,), stride=(1,), padding=(1,))\n  (bn2): BatchNorm1d(24, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n  (cnn_drop): Dropout(p=0.2, inplace=False)\n  (attn_fc): Linear(in_features=24, out_features=32, bias=True)\n  (attn_vec): Linear(in_features=32, out_features=1, bias=True)\n  (dropout): Dropout(p=0.3, inplace=False)\n  (head): Sequential(\n    (0): Linear(in_features=24, out_features=32, bias=True)\n    (1): ReLU()\n    (2): Dropout(p=0.3, inplace=False)\n    (3): Linear(in_features=32, out_features=2, bias=True)\n  )\n)"
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -324,20 +323,26 @@
     "\n",
     "# Restore best-validation weights\n",
     "model.load_state_dict(best_state)\n",
-    "model.to(device)\n"
+    "model.to(device)\n",
+    "# Save the best model\n",
+    "torch.save(model.state_dict(), \"pre-may-model.pth\")\n",
+    "# Save test data\n",
+    "\n",
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-06T00:31:48.793336Z",
-     "start_time": "2025-07-06T00:31:39.501132Z"
+     "end_time": "2025-07-06T03:22:06.666486Z",
+     "start_time": "2025-07-06T03:21:57.268324Z"
     }
    },
    "id": "42f31cdba1a7783a"
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 104,
    "outputs": [
     {
      "name": "stdout",
@@ -354,13 +359,14 @@
     "    for xb, yb in test_loader:\n",
     "        xb, yb = xb.to(device), yb.to(device)\n",
     "        t_corr += (model(xb).argmax(1)==yb).sum().item(); t_cnt += yb.size(0)\n",
-    "print(\"Test Accuracy:\", round(t_corr/t_cnt, 4))\n"
+    "print(\"Test Accuracy:\", round(t_corr/t_cnt, 4))\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-07-06T00:31:48.824260Z",
-     "start_time": "2025-07-06T00:31:48.792823Z"
+     "end_time": "2025-07-06T03:22:06.702017Z",
+     "start_time": "2025-07-06T03:22:06.667416Z"
     }
    },
    "id": "d0012a83e4ab684b"
